--- a/Veiculos v1/Questionario 2.3
+++ b/Veiculos v1/Questionario 2.3
@@ -9,7 +9,7 @@ operação no veiculo atribuido a posicao da lista.
 ---------------------------------------------------------------------------------------------------------------
 b) Identifique algum ponto no código onde está sendo usado o princípio da substituição.
 
-Resposta: É usado substituição na Classe 'Simulador' nos métodos 'getDescricaoFrota' e 'buscarVeiculo', dentro
+Resposta: É usado substituição na Classe 'Simulador' nos métodos 'getDescricaoFrota' e 'buscarVeiculo', dentro do
 'foreach' possui uma variavel do tipo 'Veiculo' a qual recebe diferentes tipos de veículos, sendo eles pra
 comparação ou exibição dos dados na tela.
 
